# Maya-Api-Learning-Journey

./: .gitignore  CMakeLists.txt  README.md
include/AnimCurve_include/: AnimCurveCmd.h  AnimUtil.h
include/AttractDeformer_include/: AttractDeformer.h
include/BasicDeformer_include/: BasicDeformer.h
include/BlendShapeDeformer_include/: BlendShapeDeformer.h
include/CostumeSelectContext_include/: CostumeSelectContext.h  CostumeSelectContextCommand.h
include/DistanceBetweenLocator_include/: DistanceBetweenLocator.h  DistanceBetweenLocatorCommand.h  DistanceBetweenLocatorDrawOverride.h  DistanceBetweenLocatorUserData.h
include/HelloWorldCmd_include/: HelloWorldCmd.h
include/HelloWorldLocator_include/: HelloWorldDrawOverride.h  HelloWorldLocator.h
include/JointCreateContext_include/: JointCreateContext.h  JointCreateContextCommand.h
include/MultiplyNode_include/: MultiplyNode.h
include/RetimingTool_include/: RetimingToolCmd.h
include/RollingNode_include/: RollingNode.h
include/SimpleCmd_include/: SimpleCmd.h
include/SimpleLocator_include/: SimpleLocator.h  SimpleLocatorDrawOverride.h  SimpleLocatorUserData.h
notes/: AEDistanceBetweenLocatorTemplate.mel  Notes.cpp
scripts/: AfterBuild.py  BeforeBuild.py
src/: PluginMain.cpp
src/AnimCurve_src/: AnimCurveCmd.cpp  AnimUtil.cpp
src/AttractDeformer_src/: AttractDeformer.cpp
src/BasicDeformer_src/: BasicDeformer.cpp
src/BlendShapeDeformer_src/: BlendShapeDeformer.cpp
src/CostumeSelectContext_src/: CostumeSelectContext.cpp  CostumeSelectContextCommand.cpp
src/DistanceBetweenLocator_src/: DistanceBetweenLocator.cpp  DistanceBetweenLocatorCommand.cpp  DistanceBetweenLocatorDrawOverride.cpp  DistanceBetweenLocatorUserData.cpp
src/HelloWorldCmd_src/: HelloWorldCmd.cpp
src/HelloWorldLocator_src/: HelloWorldDrawOverride.cpp  HelloWorldLocator.cpp
src/JointCreateContext_src/: JointCreateContext.cpp  JointCreateContextCommand.cpp
src/MultiplyNode_src/: MultiplyNode.cpp
src/RetimingTool_src/: RetimingToolCmd.cpp
src/RollingNode_src/: RollingNode.cpp
src/SimpleCmd_src/: SimpleCmd.cpp
src/SimpleLocator_src/: SimpleLocator.cpp  SimpleLocatorDrawOverride.cpp  SimpleLocatorUserData.cpp
